tests/errors/semantic/blocking/UNANNOTATED_TYPE_ALIAS.py
# pylint: disable=missing-function-docstring, missing-module-docstring

MyType = int

def f(a : MyType):
    pass
